--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "mongodb": "^5.3.0",
-    "mongodb-legacy": "^5.0.0"
+    "mongodb-legacy": "^5.0.0",
+    "mongoose": "^7.0.4",
+    "validator": "^13.9.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
