--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^5.3.0",
     "mongodb-legacy": "^5.0.0",
     "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.32.1",
     "validator": "^13.9.0"
   },
   "devDependencies": {
